[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/graphics.png" type="Texture" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://resources/HUDtheme.tres" type="Theme" id=3]
[ext_resource path="res://resources/Font.tres" type="DynamicFont" id=4]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://resources/Montserrat-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Base" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )

[node name="WeaponIcon" type="Sprite" parent="Base"]
position = Vector2( 72, 64 )
scale = Vector2( 4, 4 )
texture = SubResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.635294 )
margin_left = 8.0
margin_top = 104.0
margin_right = 136.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityCooldown" type="ProgressBar" parent="Panel"]
self_modulate = Color( 0.992157, 1, 0.478431, 1 )
margin_top = 32.0
margin_right = 128.0
margin_bottom = 56.0
theme = ExtResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponCooldown" type="ProgressBar" parent="Panel"]
margin_right = 128.0
margin_bottom = 24.0
theme = ExtResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color( 0.0627451, 1, 0, 1 )
anchor_right = 1.0
margin_bottom = 14.0
theme = ExtResource( 3 )
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarB" type="ProgressBar" parent="."]
self_modulate = Color( 0.0627451, 1, 0, 1 )
anchor_top = 0.973
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.199951
margin_bottom = -2.0
theme = ExtResource( 3 )
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="."]
visible = false
anchor_left = 0.875
anchor_top = 0.213
anchor_right = 0.875
anchor_bottom = 0.213
margin_left = -896.0
margin_top = -127.8
margin_right = -896.0
margin_bottom = -127.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jazzed" type="Label" parent="GameOver"]
self_modulate = Color( 1, 0.384314, 0.384314, 1 )
margin_left = 384.0
margin_top = 128.0
margin_right = 960.0
margin_bottom = 260.0
custom_fonts/font = ExtResource( 4 )
text = "JAZZED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GameOver"]
margin_left = 656.0
margin_top = 224.0
margin_right = 816.0
margin_bottom = 261.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Jam Again"
__meta__ = {
"_edit_use_anchors_": false
}
